fix: Change z-index of background image so it doesn't cover header

--- a/src/routes/home/Home.module.css
+++ b/src/routes/home/Home.module.css
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 100vh;
 	background: linear-gradient(rgb(220, 220, 220), rgb(255, 255, 255));
+	z-index: -1;
 }
 
 .mainWrapper {
@@ -74,4 +75,5 @@
 	width: auto;
 	bottom: 0;
 	right: 10em;
+	z-index: 0;
 }
